--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MOUNTAIN - Hiking club</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./assets/stylesheets/styles.css">
+    <link rel="stylesheet" href="./stylesheets/fonts.css">
+    <link rel="stylesheet" href="./stylesheets/styles.css">
 </head>
 <body>
-    
+    <div class="left-block">
+        <p>Baloo2-Regular</p>
+    </div>
+    <div class="central-block">
+
+    </div>
+    <div class="right-block">
+
+    </div>
 </body>
 </html>
