--- a/index.html
+++ b/index.html
@@ -77,11 +77,35 @@
                 <span class="log-out__text">Sign Out</span>
             </div>
         </div>
+
+
+<!-- NOW WORKING -->
         <div class="flex-item central-block">
 
-        </div>
-        <div class="flex-item right-block">
 
+            <div class="search">
+                <div class="search__input">
+                    <label for="search">
+                        <img src="./assets/icons/header/search/search.svg" alt="search" class="search__icon">
+                        <span class="search__input-text">Search for places</span>
+                        <input type="text" id="searh">
+                    </label>
+                </div>
+                <div class="search__settings">
+                    <img src="./assets/icons/header/settings/setting.svg" alt="settings">
+                </div>
+            </div>
+
+
+            <div class="cards"></div>
+            <div class="dates"></div>
+            <div class="player"></div>
+        </div>
+
+
+
+
+        <div class="flex-item right-block">
         </div>
     </div>
 </body>
