add search section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
             <div class="search">
                 <div class="search__input">
-                    <label for="search">
-                        <img src="./assets/icons/header/search/search.svg" alt="search" class="search__icon">
-                        <span class="search__input-text">Search for places</span>
-                        <input type="text" id="searh">
+                    <label for="search" class="search__label">
+                        <!--<img src="./assets/icons/header/search/search.svg" alt="search" class="search__icon">-->
+                        <!--<span class="search__input-text">Search for places</span>-->
+                        <input type="text" id="searh" placeholder="Search for places">
                     </label>
                 </div>
                 <div class="search__settings">
@@ -97,7 +97,21 @@
             </div>
 
 
-            <div class="cards"></div>
+            <div class="discover-world">
+
+                <h2 class="discover-world__title">Discover World</h2>
+
+                <div class="discover-world__list">
+                    <div class="discover-world__list-item">Recommended</div>
+                    <div class="discover-world__list-item">Popular Places</div>
+                    <div class="discover-world__list-item">Trip's</div>
+                </div>
+                
+                
+
+            </div>
+
+
             <div class="dates"></div>
             <div class="player"></div>
         </div>
