--- a/index.html
+++ b/index.html
@@ -217,13 +217,39 @@
                 </div>
             </div>
 
-            <div class="player"></div>
+            <div class="footer">
+                <div class="player">
+
+                    <div class="player__img">
+                        <img src="./assets/images/__event-dates/__player/player-img2.png" alt="player-img">
+                    </div>
+
+                    <div class="player__text">
+                        <div class="player__text-title">Netherlands Travel Tour</div>
+                        <div class="player__text-stars">
+                            <img src="./assets/icons/stars/stars.svg" alt="star" class="player__text-stars-img">
+                            <span class="player__text-stars-number">4.7</span>
+                        </div>
+                    </div>
+
+                    <div class="player__play">
+                        
+                    </div>
+                </div>
+                <div class="gallery">
+                    <img src="./assets/images/__event-dates/img1.png" alt="gallery image 1">
+                    <img src="./assets/images/__event-dates/img2.png" alt="gallery image 2">
+                </div>
+            </div>
+
         </div>
 
-
-
-
         <div class="flex-item right-block">
+
+            <div class="right-block__header">
+                
+            </div>
+
         </div>
     </div>
 </body>
