work on left-block

--- a/index.html
+++ b/index.html
@@ -247,7 +247,56 @@
         <div class="flex-item right-block">
 
             <div class="right-block__header">
+
+                <div class="right-block__header-location">
+                    <img src="./assets/icons/location/location.svg" alt="location" class="header-location-img">
+                    <span class="header-location-text">New York/ Dc</span>
+                </div>
+
+                <div class="right-block__header-avanoti">
+                    <div class="header-notification">
+                        <img src="./assets/icons/header/notification/notification.svg" alt="notification">
+                    </div>
+                    <div class="header-avatar">
+                        <img src="./assets/icons/header/avatar/avatar.svg" alt="avatar">
+                    </div>
+                </div>
                 
+            </div>
+
+            <div class="right-block__gallery">
+               <!-- <div class="gallery-like"></div> -->
+                <div class="gallery-list">
+                    <img src="./assets/images/__brazil-forest/__gallery/img1.svg" alt="gallery image 1">
+                    <img src="./assets/images/__brazil-forest/__gallery/img2.svg" alt="gallery image 2">
+                    <img src="./assets/images/__brazil-forest/__gallery/img3.svg" alt="gallery image 3">
+                    <img src="./assets/images/__brazil-forest/__gallery/img4.svg" alt="gallery image 4">
+                </div>  
+            </div>
+
+            <div class="right-block__orders">
+
+                <div class="orders-description">
+                    <h2 class="orders-description-title">Brazil Forest</h2>
+                    <p class="orders-description-text">
+                        I spend ten minutes or so doing 
+                        a couple of Duolingo lessons in French so
+                    </p>
+                </div>
+
+                <div class="orders-book-travel">
+                    <div class="book-travel-price">
+                        <div class="price-text">
+                            per/person
+                            <div class="price-number">$1540</div>
+                        </div>
+                       <!-- <div class="price-number">$1540</div>-->
+                    </div>
+                    <div class="book-travel-button">
+                        <button>Book Travel</button>
+                    </div>
+                </div>
+
             </div>
 
         </div>
