--- a/index.html
+++ b/index.html
@@ -297,6 +297,66 @@
                     </div>
                 </div>
 
+                <div class="orders-places">
+                    <div class="orders-place">
+                        <div class="orders-place-info">
+                            <div class="place-info-img">
+                                <img src="./assets/images/__brazil-forest/__footer/nature-lake.png" alt="nature-lake">
+                            </div>
+                            <div class="place-info-title">
+                                <div class="place-info-title-text">Nature Lake</div>
+                                <div class="place-info-title-location">
+                                    <img src="./assets/icons/location/location.svg" alt="location icon" class="info-title-location-icon">
+                                    <span class="info-title-location-text">Afghanistan</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="orders-place-like">
+                            <div class="orders-place-like-icon">
+                                <img src="./assets/icons/likes/like.svg" alt="like">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="orders-place">
+                        <div class="orders-place-info">
+                            <div class="place-info-img">
+                                <img src="./assets/images/__brazil-forest/__footer/nature-lake.png" alt="nature-lake">
+                            </div>
+                            <div class="place-info-title">
+                                <div class="place-info-title-text">Nature Lake</div>
+                                <div class="place-info-title-location">
+                                    <img src="./assets/icons/location/location.svg" alt="location icon" class="info-title-location-icon">
+                                    <span class="info-title-location-text">Afghanistan</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="orders-place-like">
+                            <div class="orders-place-like-icon">
+                                <img src="./assets/icons/likes/like.svg" alt="like">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="orders-place">
+                        <div class="orders-place-info">
+                            <div class="place-info-img">
+                                <img src="./assets/images/__brazil-forest/__footer/nature-lake.png" alt="nature-lake">
+                            </div>
+                            <div class="place-info-title">
+                                <div class="place-info-title-text">Nature Lake</div>
+                                <div class="place-info-title-location">
+                                    <img src="./assets/icons/location/location.svg" alt="location icon" class="info-title-location-icon">
+                                    <span class="info-title-location-text">Afghanistan</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="orders-place-like">
+                            <div class="orders-place-like-icon">
+                                <img src="./assets/icons/likes/like.svg" alt="like">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
