--- a/index.html
+++ b/index.html
@@ -17,55 +17,55 @@
 <body>
     <div class="flex-container">
         <div class="flex-item left-block">
-            <div class="logo">
+            <div class="logo flex-remove-padding">
                 <img src="./assets//icons/header/logo/logo.svg" alt="logo">  
             </div>
             <nav class="navigation">
                 <ul>
                     <li class="navigation__item">
-                        <div class="navigation__icon active">
+                        <div class="navigation__icon flex-remove-padding active">
                             <img src="./assets/icons/sidebar/navigation/dashboard.svg" alt="dashboard">
                         </div>
                         <span class="navigation__text">Dashboard</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/notes.svg" alt="notes">
                         </div>
                         <span class="navigation__text">Note's</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/theme.svg" alt="theme">
                         </div>
                         <span class="navigation__text">Theme</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/account.svg" alt="account">
                         </div>
                         <span class="navigation__text">Account</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/explore.svg" alt="explore">
                         </div>
                         <span class="navigation__text">Explore</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/graph.svg" alt="graph">
                         </div>
                         <span class="navigation__text">Graph</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/messages.svg" alt="messages">
                         </div>
                         <span class="navigation__text">Messages</span>
                     </li>
                     <li class="navigation__item">
-                        <div class="navigation__icon">
+                        <div class="navigation__icon flex-remove-padding">
                             <img src="./assets/icons/sidebar/navigation/setting.svg" alt="setting">
                         </div>
                         <span class="navigation__text">Setting</span>
@@ -78,8 +78,6 @@
             </div>
         </div>
 
-
-<!-- NOW WORKING -->
         <div class="flex-item central-block">
 
 
@@ -358,9 +356,8 @@
                         </div>
                     </div>
                 </div>
-
+                
             </div>
-
         </div>
     </div>
 </body>
